# collegpeparkfinal

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline_results.json  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  sample_data.json  tasks.py
server/: Dockerfile  __init__.py  __main__.py  app.py  collegpeparkfinal_environment.py  requirements.txt
